--- a/StudentExam/StudentExam/Views/Lesson/Create.cshtml
+++ b/StudentExam/StudentExam/Views/Lesson/Create.cshtml
@@ -3,9 +3,9 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Yeni fənn</h1>
 
-<h4>Course</h4>
+<h4>Fənn</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -44,7 +44,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Siyahıya qayıt</a>
 </div>
 
 @section Scripts {
