--- a/StudentExam/StudentExam/Views/Lesson/Index.cshtml
+++ b/StudentExam/StudentExam/Views/Lesson/Index.cshtml
@@ -3,10 +3,10 @@
 @{
 }
 
-<h1>Index</h1>
+<h1>Fənnlər</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Fənn əlavə et</a>
 </p>
 <table class="table">
     <thead>
